--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 		<!--<module>eureka</module>-->
 		<module>publisher</module>
 		<module>consumer</module>
+		<module>hotel</module>
+
 	</modules>
 	<packaging>pom</packaging>
 	<dependencies>
