--- a/hotel/pom.xml
+++ b/hotel/pom.xml
@@ -39,7 +39,8 @@
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>elasticsearch-rest-high-level-client</artifactId>
-			<version>7.12.1</version>
+			<!--<version>7.12.1</version>-->
+			<version>8.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
