--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<!--<groupId>org.springframework.boot</groupId>-->
-		<!--<artifactId>spring-boot-starter-parent</artifactId>-->
-		<!--<version>2.3.10.RELEASE</version>-->
-		<groupId>wo1261931780</groupId>
-		<artifactId>st-springCloud2</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.0.4</version>
 	</parent>
 	<artifactId>hotel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -78,5 +74,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
