--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8089
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/test_technical?useSSL=false
+    url: jdbc:mysql://localhost:3306/test_technical?useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
@@ -14,4 +14,4 @@ logging:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: wo1261931780.hotel.pojo
+  type-aliases-package: wo1261931780.stspringCloud2.pojo
